# bazel-toolchains

./: .bazelignore  .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel  README.md  WORKSPACE.bazel  djgpp.BUILD  dosbox.sh  lib_c.c  lib_cpp.cc  lib_cpp.h  library.c  library.h  main.c  pcsx2.sh  ps2.BUILD  test.cpp  toolchain.bzl  wrapper.sh
.buildkite/: pipeline.sh  pipeline.yml
.github/workflows/: push.yml
djgpp/: MODULE.bazel  WORKSPACE.bazel
djgpp/rules/: rules.bzl
djgpp/toolchain/: BUILD.bazel  archive.BUILD  deps.bzl  djgpp.BUILD  toolchain.bzl
djgpp/toolchain/wrappers/i586-pc-msdosdjgpp/: ar.sh  as.sh  g++.sh  gcc.sh  ld.sh  strip.sh
djgpp/toolchains/: BUILD.bazel  deps.bzl  toolchain.bzl
djgpp/toolchains/wrappers/i586-pc-msdosdjgpp/: BUILD.bazel  assemble.sh  cpp_compile.sh  cpp_link_executable.sh  cpp_link_static_library.sh  strip.sh
gba/: MODULE.bazel  WORKSPACE.bazel
gba/rules/: BUILD.bazel  defs.bzl  fixer.sh
gba/toolchains/: BUILD.bazel  archive.BUILD  deps.bzl  toolchain_config.bzl
gba/toolchains/wrappers/arm-none-eabi-gcc/: BUILD.bazel  assemble.sh  cpp_compile.sh  cpp_link_executable.sh  cpp_link_static_library.sh  strip.sh
mingw/: MODULE.bazel  WORKSPACE.bazel
mingw/rules/: defs.bzl
mingw/toolchains/: BUILD.bazel  archive.BUILD  deps.bzl  toolchain.bzl
mingw/toolchains/wrappers/i686-w64-mingw32/: ar.sh  as.sh  assemble.sh  g++.sh  gcc.sh  ld.sh  strip.sh
mingw/toolchains/wrappers/x86_64-w64-mingw32/: ar.sh  as.sh  assemble.sh  cpp_compile.sh  gcc.sh  ld.sh  strip.sh
patches/djgpp/: add_build_file.patch  module_dot_bazel.patch
ps2/toolchain/: BUILD.bazel  deps.bzl  ps2.BUILD  toolchain.bzl
ps2/toolchain/wrappers/mips64r5900-ps2-elf/: ar.sh  as.sh  g++.sh  gcc.sh  strip.sh
ps2/toolchains/: BUILD.bazel  deps.bzl  toolchain.bzl  toolchain_config_iop.bzl
ps2/toolchains/wrappers/dvp/: BUILD.bazel  ar.sh  as.sh  g++.sh  gcc.sh  ld.sh  strip.sh
ps2/toolchains/wrappers/mips64r5900-ps2-elf/: BUILD.bazel  ar.sh  as.sh  g++.sh  ld.sh  strip.sh
ps2/toolchains/wrappers/mipsel-ps2-elf/: ar.sh  as.sh  g++.sh  ld.sh  strip.sh
ps2dev/: MODULE.bazel  WORKSPACE.bazel
ps2dev/rules/: rules.bzl
ps2dev/toolchains/: BUILD.bazel  archive.BUILD  deps.bzl  toolchain_config.bzl  toolchain_config_ee.bzl
ps2dev/toolchains/wrappers/mips64r5900-ps2-elf/: cpp_compile.sh  cpp_link_static_library.sh  strip.sh
ps2dev/toolchains/wrappers/mipsel-ps2-elf/: BUILD.bazel  as.sh  cpp_compile.sh  strip.sh
shared/: WORKSPACE.bazel
shared-gnu/: MODULE.bazel  WORKSPACE.bazel
shared-gnu/toolchains/: action_configs.bzl  features.bzl
shared/rules/: platform_transition.bzl
tests/binary/: BUILD.bazel  lib_c.c  lib_c.h  lib_cpp.cc  main.c
tests/gba/: BUILD.bazel  main.c
tests/msdos/: BUILD.bazel
tests/ps2/: BUILD.bazel
windows/: WORKSPACE.bazel
windows/toolchain/: BUILD.bazel  deps.bzl  mingw.BUILD  toolchain.bzl
windows/toolchain/wrappers/i686-w64-mingw32/: ar.sh  g++.sh
windows/toolchain/wrappers/x86_64-w64-mingw32/: strip.sh
windows/toolchains/: BUILD.bazel  deps.bzl
windows/toolchains/wrappers/i686-w64-mingw32/: BUILD.bazel
windows/toolchains/wrappers/x86_64-w64-mingw32/: BUILD.bazel
wrappers/: i586-pc-msdosdjgpp-ar.sh  i586-pc-msdosdjgpp-gcc.sh  i586-pc-msdosdjgpp-ld.sh
wrappers/mips64r5900el-ps2-elf/: ar.sh  gcc.sh  ld.sh
