load(
    "//:toolchain.bzl",
    "wpieterse_cc_toolchain_config",
)

cc_binary(
    name = "main",
    srcs = [
        "main.c",
    ],
)

constraint_setting(
    name = "selector",
)

constraint_value(
    name = "msdos",
    constraint_setting = "//:selector",
)

platform(
    name = "msdos_platform",
    constraint_values = [
        "//:msdos",
    ],
)

constraint_value(
    name = "ps2",
    constraint_setting = "//:selector",
)

platform(
    name = "ps2_platform",
    constraint_values = [
        "//:ps2",
    ],
)

filegroup(
    name = "msdos_all_files",
    srcs = [
        "wrappers/i586-pc-msdosdjgpp/ar.sh",
        "wrappers/i586-pc-msdosdjgpp/gcc.sh",
        "wrappers/i586-pc-msdosdjgpp/ld.sh",
        "@djgpp",
    ],
)

wpieterse_cc_toolchain_config(
    name = "msdos_wpieterse_toolchain",
    ar = "wrappers/i586-pc-msdosdjgpp/ar.sh",
    gcc = "wrappers/i586-pc-msdosdjgpp/gcc.sh",
    ld = "wrappers/i586-pc-msdosdjgpp/ld.sh",
    toolchain_name = "msdos",
)

cc_toolchain(
    name = "msdos_cc_toolchain",
    all_files = ":msdos_all_files",
    ar_files = ":msdos_all_files",
    compiler_files = ":msdos_all_files",
    dwp_files = ":msdos_all_files",
    linker_files = ":msdos_all_files",
    objcopy_files = ":msdos_all_files",
    strip_files = ":msdos_all_files",
    toolchain_config = ":msdos_wpieterse_toolchain",
)

toolchain(
    name = "msdos_toolchain",
    exec_compatible_with = [
        "@platforms//cpu:x86_64",
        "@platforms//os:linux",
    ],
    target_compatible_with = [
        ":msdos",
    ],
    toolchain = ":msdos_cc_toolchain",
    toolchain_type = "@bazel_tools//tools/cpp:toolchain_type",
)

filegroup(
    name = "ps2_all_files",
    srcs = [
        "wrappers/mips64r5900el-ps2-elf/ar.sh",
        "wrappers/mips64r5900el-ps2-elf/gcc.sh",
        "wrappers/mips64r5900el-ps2-elf/ld.sh",
        "@ps2",
    ],
)

wpieterse_cc_toolchain_config(
    name = "ps2_wpieterse_toolchain",
    ar =  "wrappers/mips64r5900el-ps2-elf/ar.sh",
    gcc = "wrappers/mips64r5900el-ps2-elf/gcc.sh",
    ld =  "wrappers/mips64r5900el-ps2-elf/ld.sh",
    toolchain_name = "ps2",
)

cc_toolchain(
    name = "ps2_cc_toolchain",
    all_files = ":ps2_all_files",
    ar_files = ":ps2_all_files",
    compiler_files = ":ps2_all_files",
    dwp_files = ":ps2_all_files",
    linker_files = ":ps2_all_files",
    objcopy_files = ":ps2_all_files",
    strip_files = ":ps2_all_files",
    toolchain_config = ":ps2_wpieterse_toolchain",
)

toolchain(
    name = "ps2_toolchain",
    exec_compatible_with = [
        "@platforms//cpu:x86_64",
        "@platforms//os:linux",
    ],
    target_compatible_with = [
        ":ps2",
    ],
    toolchain = ":ps2_cc_toolchain",
    toolchain_type = "@bazel_tools//tools/cpp:toolchain_type",
)
