cc_binary(
    name = "main",
    srcs = [
        "main.c",
    ],
    deps = [
        ":lib_c",
        ":lib_cpp",
    ],
)

cc_library(
    name = "lib_c",
    srcs = [
        "lib_c.c",
    ],
    hdrs = [
        "lib_c.h",
    ],
)

cc_library(
    name = "lib_cpp",
    srcs = [
        "lib_cpp.cc",
    ],
    hdrs = [
        "lib_cpp.h",
    ],
)
