workspace(
    name = "com_github_wpieterse-me_bazel-toolchains",
)

local_repository(
    name = "com_github_wpieterse-me_bazel-platforms",
    path = "platforms",
)

local_repository(
    name = "com_github_wpieterse-me_bazel-toolchain-djgpp",
    path = "djgpp",
)

local_repository(
    name = "com_github_wpieterse-me_bazel-toolchain-ps2",
    path = "ps2",
)

local_repository(
    name = "com_github_wpieterse-me_bazel-toolchain-windows",
    path = "windows",
)

load(
    "@com_github_wpieterse-me_bazel-toolchain-djgpp//toolchain:deps.bzl",
    "djgpp_toolchain_deps",
    "djgpp_toolchain_register",
)

djgpp_toolchain_deps()

djgpp_toolchain_register()

load(
    "@com_github_wpieterse-me_bazel-toolchain-ps2//toolchains:deps.bzl",
    "ps2_toolchain_deps",
    "ps2_toolchain_register",
)

ps2_toolchain_deps()

ps2_toolchain_register()

load(
    "@com_github_wpieterse-me_bazel-toolchain-windows//toolchains:deps.bzl",
    "mingw_toolchain_deps",
    "mingw_toolchain_register",
)

mingw_toolchain_deps()

mingw_toolchain_register()
