workspace(
    name = "com_github_wpieterse-me_bazel-toolchains",
)

local_repository(
    name = "com_github_wpieterse-me_bazel-platforms",
    path = "platforms",
)

local_repository(
    name = "com_github_wpieterse-me_bazel-toolchain-shared",
    path = "shared",
)

local_repository(
    name = "com_github_wpieterse-me_bazel-toolchain-djgpp",
    path = "djgpp",
)

local_repository(
    name = "com_github_wpieterse-me_bazel-toolchain-ps2dev",
    path = "ps2dev",
)

local_repository(
    name = "com_github_wpieterse-me_bazel-toolchain-mingw",
    path = "mingw",
)

load(
    "@com_github_wpieterse-me_bazel-toolchain-djgpp//toolchains:deps.bzl",
    djgpp_toolchain_deps = "toolchain_deps",
    djgpp_toolchain_register = "toolchain_register",
)

djgpp_toolchain_deps()

djgpp_toolchain_register()

load(
    "@com_github_wpieterse-me_bazel-toolchain-ps2dev//toolchains:deps.bzl",
    ps2_toolchain_deps = "toolchain_deps",
    ps2_toolchain_register = "toolchain_register",
)

ps2_toolchain_deps()

ps2_toolchain_register()

load(
    "@com_github_wpieterse-me_bazel-toolchain-mingw//toolchains:deps.bzl",
    mingw_toolchain_deps = "toolchain_deps",
    mingw_toolchain_register = "toolchain_register",
)

mingw_toolchain_deps()

mingw_toolchain_register()
