load(
    "@com_github_wpieterse-me_bazel-toolchain-djgpp//toolchain:toolchain.bzl",
    "cc_toolchain_config",
)

toolchain(
    name = "toolchain",
    exec_compatible_with = [
        "@platforms//cpu:x86_64",
        "@platforms//os:linux",
    ],
    target_compatible_with = [
        "@platforms//cpu:x86_32",
        "@com_github_wpieterse-me_bazel-platforms//os:msdos",
    ],
    toolchain = "@com_github_wpieterse-me_bazel-toolchain-djgpp//toolchain:cc_toolchain",
    toolchain_type = "@bazel_tools//tools/cpp:toolchain_type",
)

cc_toolchain(
    name = "cc_toolchain",
    all_files = "@com_github_wpieterse-me_bazel-toolchain-djgpp//toolchain:all_files",
    ar_files = "@com_github_wpieterse-me_bazel-toolchain-djgpp//toolchain:all_files",
    compiler_files = "@com_github_wpieterse-me_bazel-toolchain-djgpp//toolchain:all_files",
    dwp_files = "@com_github_wpieterse-me_bazel-toolchain-djgpp//toolchain:all_files",
    linker_files = "@com_github_wpieterse-me_bazel-toolchain-djgpp//toolchain:all_files",
    objcopy_files = "@com_github_wpieterse-me_bazel-toolchain-djgpp//toolchain:all_files",
    strip_files = "@com_github_wpieterse-me_bazel-toolchain-djgpp//toolchain:all_files",
    toolchain_config = "@com_github_wpieterse-me_bazel-toolchain-djgpp//toolchain:cc_toolchain_config",
)

cc_toolchain_config(
    name = "cc_toolchain_config",
)

filegroup(
    name = "all_files",
    srcs = [
        "@com_github_wpieterse-me_bazel-toolchain-djgpp//toolchain/wrappers/i586-pc-msdosdjgpp",
        "@com_github_wpieterse-me_bazel-toolchain-djgpp-archive",
    ],
)
