load(
    "@com_github_wpieterse-me_bazel-toolchain-djgpp//toolchains:toolchain.bzl",
    "cc_toolchain_config",
)

toolchain(
    name = "i586-pc-msdosdjgpp-toolchain",
    exec_compatible_with = [
        "@platforms//cpu:x86_64",
        "@platforms//os:linux",
    ],
    target_compatible_with = [
        "@platforms//cpu:x86_32",
        "@com_github_wpieterse-me_bazel-platforms//os:msdos",
    ],
    toolchain = "@com_github_wpieterse-me_bazel-toolchain-djgpp//toolchains:i586-pc-msdosdjgpp_cc-toolchain",
    toolchain_type = "@bazel_tools//tools/cpp:toolchain_type",
)

cc_toolchain(
    name = "i586-pc-msdosdjgpp_cc-toolchain",
    all_files = "@com_github_wpieterse-me_bazel-toolchain-djgpp//toolchains:i586-pc-msdosdjgpp_all-files",
    ar_files = "@com_github_wpieterse-me_bazel-toolchain-djgpp//toolchains:i586-pc-msdosdjgpp_all-files",
    compiler_files = "@com_github_wpieterse-me_bazel-toolchain-djgpp//toolchains:i586-pc-msdosdjgpp_all-files",
    dwp_files = "@com_github_wpieterse-me_bazel-toolchain-djgpp//toolchains:i586-pc-msdosdjgpp_all-files",
    linker_files = "@com_github_wpieterse-me_bazel-toolchain-djgpp//toolchains:i586-pc-msdosdjgpp_all-files",
    objcopy_files = "@com_github_wpieterse-me_bazel-toolchain-djgpp//toolchains:i586-pc-msdosdjgpp_all-files",
    strip_files = "@com_github_wpieterse-me_bazel-toolchain-djgpp//toolchains:i586-pc-msdosdjgpp_all-files",
    toolchain_config = "@com_github_wpieterse-me_bazel-toolchain-djgpp//toolchains:i586-pc-msdosdjgpp_cc-toolchain-config",
)

cc_toolchain_config(
    name = "i586-pc-msdosdjgpp_cc-toolchain-config",
)

filegroup(
    name = "i586-pc-msdosdjgpp_all-files",
    srcs = [
        "@com_github_wpieterse-me_bazel-toolchain-djgpp//toolchains/wrappers/i586-pc-msdosdjgpp",
        "@com_github_wpieterse-me_bazel-toolchain-djgpp-archive",
    ],
)
