load(
    "@com_github_wpieterse-me_bazel-toolchain-gba//toolchains:toolchain_config.bzl",
    "cc_toolchain_config",
)

toolchain(
    name = "arm-none-eabi-gcc-toolchain",
    exec_compatible_with = [
        "@platforms//cpu:x86_64",
        "@platforms//os:linux",
    ],
    target_compatible_with = [
        "@platforms//cpu:arm",
        "@com_github_wpieterse-me_bazel-platforms//os:gba",
    ],
    toolchain = "@com_github_wpieterse-me_bazel-toolchain-gba//toolchains:arm-none-eabi-gcc-cc_toolchain",
    toolchain_type = "@bazel_tools//tools/cpp:toolchain_type",
)

cc_toolchain(
    name = "arm-none-eabi-gcc-cc_toolchain",
    all_files = "@com_github_wpieterse-me_bazel-toolchain-gba//toolchains:arm-none-eabi-gcc-all_files",
    ar_files = "@com_github_wpieterse-me_bazel-toolchain-gba//toolchains:arm-none-eabi-gcc-all_files",
    compiler_files = "@com_github_wpieterse-me_bazel-toolchain-gba//toolchains:arm-none-eabi-gcc-all_files",
    dwp_files = "@com_github_wpieterse-me_bazel-toolchain-gba//toolchains:arm-none-eabi-gcc-all_files",
    linker_files = "@com_github_wpieterse-me_bazel-toolchain-gba//toolchains:arm-none-eabi-gcc-all_files",
    objcopy_files = "@com_github_wpieterse-me_bazel-toolchain-gba//toolchains:arm-none-eabi-gcc-all_files",
    strip_files = "@com_github_wpieterse-me_bazel-toolchain-gba//toolchains:arm-none-eabi-gcc-all_files",
    toolchain_config = "@com_github_wpieterse-me_bazel-toolchain-gba//toolchains:arm-none-eabi-gcc-cc_toolchain_config",
)

cc_toolchain_config(
    name = "arm-none-eabi-gcc-cc_toolchain_config",
    target = "wrappers/arm-none-eabi-gcc",
)

filegroup(
    name = "arm-none-eabi-gcc-all_files",
    srcs = [
        "@com_github_wpieterse-me_bazel-toolchain-gba-archive",
        "@com_github_wpieterse-me_bazel-toolchain-gba//toolchains/wrappers/arm-none-eabi-gcc",
    ],
)
