load(
    "@com_github_wpieterse-me_bazel-toolchain-ps2//toolchains:toolchain_config_ee.bzl",
    "cc_toolchain_config_ee",
)

load(
    "@com_github_wpieterse-me_bazel-toolchain-ps2//toolchains:toolchain_config_iop.bzl",
    "cc_toolchain_config_iop",
)

toolchain(
    name = "mips64r5900-ps2-elf-toolchain",
    exec_compatible_with = [
        "@platforms//cpu:x86_64",
        "@platforms//os:linux",
    ],
    target_compatible_with = [
        "@com_github_wpieterse-me_bazel-platforms//cpu:mips64r5900el",
        "@com_github_wpieterse-me_bazel-platforms//os:ps2-ee",
    ],
    toolchain = "@com_github_wpieterse-me_bazel-toolchain-ps2//toolchains:mips64r5900-ps2-elf-cc_toolchain",
    toolchain_type = "@bazel_tools//tools/cpp:toolchain_type",
)

cc_toolchain(
    name = "mips64r5900-ps2-elf-cc_toolchain",
    all_files = "@com_github_wpieterse-me_bazel-toolchain-ps2//toolchains:mips64r5900-ps2-elf-all_files",
    ar_files = "@com_github_wpieterse-me_bazel-toolchain-ps2//toolchains:mips64r5900-ps2-elf-all_files",
    compiler_files = "@com_github_wpieterse-me_bazel-toolchain-ps2//toolchains:mips64r5900-ps2-elf-all_files",
    dwp_files = "@com_github_wpieterse-me_bazel-toolchain-ps2//toolchains:mips64r5900-ps2-elf-all_files",
    linker_files = "@com_github_wpieterse-me_bazel-toolchain-ps2//toolchains:mips64r5900-ps2-elf-all_files",
    objcopy_files = "@com_github_wpieterse-me_bazel-toolchain-ps2//toolchains:mips64r5900-ps2-elf-all_files",
    strip_files = "@com_github_wpieterse-me_bazel-toolchain-ps2//toolchains:mips64r5900-ps2-elf-all_files",
    toolchain_config = "@com_github_wpieterse-me_bazel-toolchain-ps2//toolchains:mips64r5900-ps2-elf-cc_toolchain_config",
)

cc_toolchain_config_ee(
    name = "mips64r5900-ps2-elf-cc_toolchain_config",
)

filegroup(
    name = "mips64r5900-ps2-elf-all_files",
    srcs = [
        "@com_github_wpieterse-me_bazel-toolchain-ps2//toolchains/wrappers/mips64r5900-ps2-elf",
        "@com_github_wpieterse-me_bazel-toolchain-ps2dev-archive",
    ],
)

toolchain(
    name = "mipsel-ps2-elf-toolchain",
    exec_compatible_with = [
        "@platforms//cpu:x86_64",
        "@platforms//os:linux",
    ],
    target_compatible_with = [
        "@com_github_wpieterse-me_bazel-platforms//cpu:mipsel",
        "@com_github_wpieterse-me_bazel-platforms//os:ps2-iop-elf",
    ],
    toolchain = "@com_github_wpieterse-me_bazel-toolchain-ps2//toolchains:mipsel-ps2-elf-cc_toolchain",
    toolchain_type = "@bazel_tools//tools/cpp:toolchain_type",
)

cc_toolchain(
    name = "mipsel-ps2-elf-cc_toolchain",
    all_files = "@com_github_wpieterse-me_bazel-toolchain-ps2//toolchains:mipsel-ps2-elf-all_files",
    ar_files = "@com_github_wpieterse-me_bazel-toolchain-ps2//toolchains:mipsel-ps2-elf-all_files",
    compiler_files = "@com_github_wpieterse-me_bazel-toolchain-ps2//toolchains:mipsel-ps2-elf-all_files",
    dwp_files = "@com_github_wpieterse-me_bazel-toolchain-ps2//toolchains:mipsel-ps2-elf-all_files",
    linker_files = "@com_github_wpieterse-me_bazel-toolchain-ps2//toolchains:mipsel-ps2-elf-all_files",
    objcopy_files = "@com_github_wpieterse-me_bazel-toolchain-ps2//toolchains:mipsel-ps2-elf-all_files",
    strip_files = "@com_github_wpieterse-me_bazel-toolchain-ps2//toolchains:mipsel-ps2-elf-all_files",
    toolchain_config = "@com_github_wpieterse-me_bazel-toolchain-ps2//toolchains:mipsel-ps2-elf-cc_toolchain_config",
)

cc_toolchain_config_iop(
    name = "mipsel-ps2-elf-cc_toolchain_config",
)

filegroup(
    name = "mipsel-ps2-elf-all_files",
    srcs = [
        "@com_github_wpieterse-me_bazel-toolchain-ps2//toolchains/wrappers/mipsel-ps2-elf",
        "@com_github_wpieterse-me_bazel-toolchain-ps2dev-archive",
    ],
)
