load(
    "@com_github_wpieterse-me_bazel-toolchain-ps2dev//toolchains:toolchain_config.bzl",
    "cc_toolchain_config",
)

toolchain(
    name = "mips64r5900-ps2-elf-toolchain",
    exec_compatible_with = [
        "@platforms//cpu:x86_64",
        "@platforms//os:linux",
    ],
    target_compatible_with = [
        "@com_github_wpieterse-me_bazel-platforms//cpu:mips64r5900el",
        "@com_github_wpieterse-me_bazel-platforms//os:ps2-ee",
    ],
    toolchain = "@com_github_wpieterse-me_bazel-toolchain-ps2dev//toolchains:mips64r5900-ps2-elf-cc_toolchain",
    toolchain_type = "@bazel_tools//tools/cpp:toolchain_type",
)

cc_toolchain(
    name = "mips64r5900-ps2-elf-cc_toolchain",
    all_files = "@com_github_wpieterse-me_bazel-toolchain-ps2dev//toolchains:mips64r5900-ps2-elf-all_files",
    ar_files = "@com_github_wpieterse-me_bazel-toolchain-ps2dev//toolchains:mips64r5900-ps2-elf-all_files",
    compiler_files = "@com_github_wpieterse-me_bazel-toolchain-ps2dev//toolchains:mips64r5900-ps2-elf-all_files",
    dwp_files = "@com_github_wpieterse-me_bazel-toolchain-ps2dev//toolchains:mips64r5900-ps2-elf-all_files",
    linker_files = "@com_github_wpieterse-me_bazel-toolchain-ps2dev//toolchains:mips64r5900-ps2-elf-all_files",
    objcopy_files = "@com_github_wpieterse-me_bazel-toolchain-ps2dev//toolchains:mips64r5900-ps2-elf-all_files",
    strip_files = "@com_github_wpieterse-me_bazel-toolchain-ps2dev//toolchains:mips64r5900-ps2-elf-all_files",
    toolchain_config = "@com_github_wpieterse-me_bazel-toolchain-ps2dev//toolchains:mips64r5900-ps2-elf-cc_toolchain_config",
)

cc_toolchain_config(
    name = "mips64r5900-ps2-elf-cc_toolchain_config",
    target = "wrappers/mips64r5900-ps2-elf",
)

filegroup(
    name = "mips64r5900-ps2-elf-all_files",
    srcs = [
        "@com_github_wpieterse-me_bazel-toolchain-ps2dev-archive",
        "@com_github_wpieterse-me_bazel-toolchain-ps2dev//toolchains/wrappers/mips64r5900-ps2-elf",
    ],
)

toolchain(
    name = "mipsel-ps2-elf-toolchain",
    exec_compatible_with = [
        "@platforms//cpu:x86_64",
        "@platforms//os:linux",
    ],
    target_compatible_with = [
        "@com_github_wpieterse-me_bazel-platforms//cpu:mipsel",
        "@com_github_wpieterse-me_bazel-platforms//os:ps2-iop-elf",
    ],
    toolchain = "@com_github_wpieterse-me_bazel-toolchain-ps2dev//toolchains:mipsel-ps2-elf-cc_toolchain",
    toolchain_type = "@bazel_tools//tools/cpp:toolchain_type",
)

cc_toolchain(
    name = "mipsel-ps2-elf-cc_toolchain",
    all_files = "@com_github_wpieterse-me_bazel-toolchain-ps2dev//toolchains:mipsel-ps2-elf-all_files",
    ar_files = "@com_github_wpieterse-me_bazel-toolchain-ps2dev//toolchains:mipsel-ps2-elf-all_files",
    compiler_files = "@com_github_wpieterse-me_bazel-toolchain-ps2dev//toolchains:mipsel-ps2-elf-all_files",
    dwp_files = "@com_github_wpieterse-me_bazel-toolchain-ps2dev//toolchains:mipsel-ps2-elf-all_files",
    linker_files = "@com_github_wpieterse-me_bazel-toolchain-ps2dev//toolchains:mipsel-ps2-elf-all_files",
    objcopy_files = "@com_github_wpieterse-me_bazel-toolchain-ps2dev//toolchains:mipsel-ps2-elf-all_files",
    strip_files = "@com_github_wpieterse-me_bazel-toolchain-ps2dev//toolchains:mipsel-ps2-elf-all_files",
    toolchain_config = "@com_github_wpieterse-me_bazel-toolchain-ps2dev//toolchains:mipsel-ps2-elf-cc_toolchain_config",
)

cc_toolchain_config(
    name = "mipsel-ps2-elf-cc_toolchain_config",
    target = "wrappers/mipsel-ps2-elf",
)

filegroup(
    name = "mipsel-ps2-elf-all_files",
    srcs = [
        "@com_github_wpieterse-me_bazel-toolchain-ps2dev-archive",
        "@com_github_wpieterse-me_bazel-toolchain-ps2dev//toolchains/wrappers/mipsel-ps2-elf",
    ],
)
