load(
    "@com_github_wpieterse-me_bazel-toolchain-windows//toolchains:toolchain.bzl",
    "cc_toolchain_config",
)

toolchain(
    name = "i686-w64-mingw32-toolchain",
    exec_compatible_with = [
        "@platforms//cpu:x86_64",
        "@platforms//os:linux",
    ],
    target_compatible_with = [
        "@platforms//cpu:x86_32",
        "@platforms//os:windows",
    ],
    toolchain = "@com_github_wpieterse-me_bazel-toolchain-windows//toolchains:i686-w64-mingw32_cc-toolchain",
    toolchain_type = "@bazel_tools//tools/cpp:toolchain_type",
)

cc_toolchain(
    name = "i686-w64-mingw32_cc-toolchain",
    all_files = "@com_github_wpieterse-me_bazel-toolchain-windows//toolchains:i686-w64-mingw32_all-files",
    ar_files = "@com_github_wpieterse-me_bazel-toolchain-windows//toolchains:i686-w64-mingw32_all-files",
    compiler_files = "@com_github_wpieterse-me_bazel-toolchain-windows//toolchains:i686-w64-mingw32_all-files",
    dwp_files = "@com_github_wpieterse-me_bazel-toolchain-windows//toolchains:i686-w64-mingw32_all-files",
    linker_files = "@com_github_wpieterse-me_bazel-toolchain-windows//toolchains:i686-w64-mingw32_all-files",
    objcopy_files = "@com_github_wpieterse-me_bazel-toolchain-windows//toolchains:i686-w64-mingw32_all-files",
    strip_files = "@com_github_wpieterse-me_bazel-toolchain-windows//toolchains:i686-w64-mingw32_all-files",
    toolchain_config = "@com_github_wpieterse-me_bazel-toolchain-windows//toolchains:i686-w64-mingw32_cc-toolchain-config",
)

cc_toolchain_config(
    name = "i686-w64-mingw32_cc-toolchain-config",
)

filegroup(
    name = "i686-w64-mingw32_all-files",
    srcs = [
        "@com_github_wpieterse-me_bazel-toolchain-windows//toolchains/wrappers/i686-w64-mingw32",
        "@mingw_toolchain",
    ],
)

toolchain(
    name = "x86_64-w64-mingw32-toolchain",
    exec_compatible_with = [
        "@platforms//cpu:x86_64",
        "@platforms//os:linux",
    ],
    target_compatible_with = [
        "@platforms//cpu:x86_64",
        "@platforms//os:windows",
    ],
    toolchain = "@com_github_wpieterse-me_bazel-toolchain-windows//toolchains:x86_64-w64-mingw32_cc-toolchain",
    toolchain_type = "@bazel_tools//tools/cpp:toolchain_type",
)

cc_toolchain(
    name = "x86_64-w64-mingw32_cc-toolchain",
    all_files = "@com_github_wpieterse-me_bazel-toolchain-windows//toolchains:x86_64-w64-mingw32_all-files",
    ar_files = "@com_github_wpieterse-me_bazel-toolchain-windows//toolchains:x86_64-w64-mingw32_all-files",
    compiler_files = "@com_github_wpieterse-me_bazel-toolchain-windows//toolchains:x86_64-w64-mingw32_all-files",
    dwp_files = "@com_github_wpieterse-me_bazel-toolchain-windows//toolchains:x86_64-w64-mingw32_all-files",
    linker_files = "@com_github_wpieterse-me_bazel-toolchain-windows//toolchains:x86_64-w64-mingw32_all-files",
    objcopy_files = "@com_github_wpieterse-me_bazel-toolchain-windows//toolchains:x86_64-w64-mingw32_all-files",
    strip_files = "@com_github_wpieterse-me_bazel-toolchain-windows//toolchains:x86_64-w64-mingw32_all-files",
    toolchain_config = "@com_github_wpieterse-me_bazel-toolchain-windows//toolchains:x86_64-w64-mingw32_cc-toolchain-config",
)

cc_toolchain_config(
    name = "x86_64-w64-mingw32_cc-toolchain-config",
)

filegroup(
    name = "x86_64-w64-mingw32_all-files",
    srcs = [
        "@com_github_wpieterse-me_bazel-toolchain-windows//toolchains/wrappers/x86_64-w64-mingw32",
        "@mingw_toolchain",
    ],
)
